--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ dependencies = [
     "notebook>=7.4.5",
     "numpy>=2.3.3",
     "polars>=1.33.1",
+    "pymc>=5.25.1",
+    "scikit-learn>=1.7.2",
     "sf-quant>=0.1.11",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
+    "xgboost>=3.0.5",
 ]
 
